--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.515.0",
     "mysql2": "^3.9.1",
     "next": "14.0.4",
     "next-auth": "^4.24.6",
     "react": "^18",
     "react-dom": "^18",
-    "swiper": "^11.0.6"
+    "swiper": "^11.0.6",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
