--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.515.0",
+    "cookies-next": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^3.9.1",
     "next": "14.0.4",
