--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@aws-sdk/client-s3": "^3.515.0",
     "cookies-next": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^8.2.0",
     "mysql2": "^3.9.1",
     "next": "14.0.4",
     "next-auth": "^4.24.6",
